--- a/src/main/resources/local/application.properties
+++ b/src/main/resources/local/application.properties
@@ -6,3 +6,8 @@ db.password=6_CGJZy5Bvu2pm3kalLR8-_AkU
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 entitymanager.packages.to.scan=com.agrocom.model
+
+mail.sendGrid.username=bogdan.rusu
+mail.sendGrid.password=sendgridqwerty123
+
+account.confirm.url=localhost:8080/confirm/
